--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "jwt-decode": "^3.1.2",
     "luxon": "^2.1.1",
     "react": "^17.0.2",
+    "react-dnd": "^9.5.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
+    "react-draggable-list": "^4.0.4",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
+    "react-sort-list": "^0.0.13",
+    "react-sortly": "^3.0.4",
     "sass": "^1.43.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
