--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "luxon": "^2.1.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dnd": "^9.5.1",
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
