--- a/.env
+++ b/.env
@@ -2,9 +2,10 @@ REACT_APP_GOOGLE_CLIENT_ID = 1088263212743-p5ttcp19knoer5dduc5le1lnl0v5i475.apps
 
 REACT_APP_BASE_URL = http://localhost:3000
 
-REACT_APP_SERVER_URL = http://localhost:5000
-REACT_APP_GQL_SERVER_URL = http://localhost:5000/graphql
-REACT_APP_GQL_SUBSCRIPTION_SERVER_URL = ws://localhost:5000/subscriptions
+REACT_APP_SERVER_URL = http://localhost:5009
 
-FAST_REFRESH=false
-REACT_APP_FAST_REFRESH=false
+REACT_APP_GQL_SERVER_URL = http://localhost:5009/graphql
+
+REACT_APP_GQL_SUBSCRIPTION_SERVER_URL = ws://localhost:5009/subscriptions
+
+FAST_REFRESH=false REACT_APP_FAST_REFRESH=false
